=== master

* Speed up validates_unique in validation_helpers plugin by using empty? instead of count == 0 (numbata) (#2122)

* Speed up regexp matches in sqlite adapter on Ruby 2.4+ (jeremyevans)

* Add sqlite adapter :regexp_function_cache option for specifying the cache object to use (paddor, jeremyevans) (#2116)

* Respect list plugin :top option when inserting the first row into the model's table (johanmagnusson) (#2115)

* Switch default connection pool to timed_queue on Ruby 3.4+ (jeremyevans)

* Support on_duplicate_columns={raise,warn} parameter in connection URL when using duplicate_columns_handler extension (jeremyevans)

* Add transaction_connection_validator extension for retrying transactions on new connection if ther is a disconnect error when starting transaction (jeremyevans)

=== 5.76.0 (2024-01-01)

* Improve performance and flexibility of regexp matching in sqlite adapter (paddor) (#2108)

* Support SQL::Identifier for Database#tables :schema option values on PostgreSQL (jeremyevans)

* Support generating rcte queries using UNION or UNION ALL in the rcte plugin (jonathanfrias) (#2107)

* Make Database#table_exists? on PostgreSQL handle lock or statement timeout errors as evidence the table exists (jeremyevans) (#2106)

* Work around DateTime.jd fractional second bug on JRuby in named_timezones extension (jeremyevans)

* Support fractional times and timestamps on SQLAnywhere (jeremyevans)

* Make round_timestamps extension use Dataset#sqltime_precision for rounding Sequel::SQLTime values (jeremyevans)

* Remove special handling of %N modifier in Dataset#default_timestamp_format (jeremyevans)

* Add Dataset#default_time_format private method, for adapters to override for time (not timestamp) formatting (jeremyevans)

* Remove Dataset#format_timestamp_offset private method (jeremyevans)

* Remove special handling of %z modifier in Dataset#default_timestamp_format (jeremyevans)
